--- a/EEG_Classification.ipynb
+++ b/EEG_Classification.ipynb
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bg0qfQlM76lo",
-        "outputId": "9a51bfbe-9e12-4d5d-a1e1-1a3bf1b059e2"
+        "outputId": "12e46dc5-6313-42f2-e30c-9be1276be07e"
       },
       "execution_count": 1,
       "outputs": [
@@ -275,14 +275,14 @@
         "\n",
         "# preprocess all groups (ADHD and Control)\n",
         "preprocess_group(pathADHD, file_names_adhd_dataset, 'ADHD')\n",
-        "preprocess_group(pathControl, file_names_control_dataset, 'CONTROL')\n"
+        "preprocess_group(pathControl, file_names_control_dataset, 'CONTROL')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aI9CYfPIPI_j",
-        "outputId": "2f08793f-2ac7-46c7-bd2f-832a77ce088d"
+        "outputId": "b80f5289-2840-4cf9-b9d2-33d99d8bf8a7"
       },
       "execution_count": 10,
       "outputs": [
@@ -427,7 +427,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZbHhYB6QhmEu",
-        "outputId": "c72e8b50-aa51-4bc7-97d2-1d5b8596c500"
+        "outputId": "3d45eb79-1211-4106-f696-448d04fb03d9"
       },
       "execution_count": 11,
       "outputs": [
@@ -453,7 +453,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VitoUdYYimve",
-        "outputId": "03958bb8-a7db-45e0-ad86-67623145e9c6"
+        "outputId": "37f732b3-58a6-457d-8ee6-cbbae292b9ad"
       },
       "execution_count": 12,
       "outputs": [
@@ -564,12 +564,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "zHFZNPEfLfLj",
-        "outputId": "fccab8a9-a402-4e0b-93cd-f2ca9097e581",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 755
-        }
+        },
+        "id": "zHFZNPEfLfLj",
+        "outputId": "9e546052-96b4-4859-fb28-805f52070232"
       },
       "execution_count": 15,
       "outputs": [
@@ -603,6 +603,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Make a prediction"
+      ],
+      "metadata": {
+        "id": "Dh5xXvdQcXfE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data = np.array(dataControl[8]).reshape(1, -1)\n",
@@ -615,7 +624,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4gm_pEGHxfcy",
-        "outputId": "01c5dace-9691-4503-b5ae-3e9e1d167f09"
+        "outputId": "fc54e90e-70a1-482e-f88c-79581eb05b8a"
       },
       "execution_count": 16,
       "outputs": [
