--- a/EEG_Classification.ipynb
+++ b/EEG_Classification.ipynb
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bg0qfQlM76lo",
-        "outputId": "0a567b2d-23c5-43a2-f348-96c76d21564c"
+        "outputId": "4df9ba81-bfa0-460c-c9b8-4144127f1730"
       },
       "execution_count": 1,
       "outputs": [
@@ -58,7 +58,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'EEG-Classification' already exists and is not an empty directory.\n"
+            "Cloning into 'EEG-Classification'...\n",
+            "remote: Enumerating objects: 377, done.\u001b[K\n",
+            "remote: Counting objects: 100% (121/121), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (120/120), done.\u001b[K\n",
+            "remote: Total 377 (delta 58), reused 2 (delta 0), pack-reused 256 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (377/377), 74.32 MiB | 8.17 MiB/s, done.\n",
+            "Resolving deltas: 100% (58/58), done.\n",
+            "Updating files: 100% (246/246), done.\n"
           ]
         }
       ]
@@ -119,7 +126,7 @@
       "metadata": {
         "id": "CTa5mnZ5aOA4"
       },
-      "execution_count": 31,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -155,7 +162,7 @@
       "metadata": {
         "id": "uYC7QbosZJLz"
       },
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -178,7 +185,7 @@
       "metadata": {
         "id": "T3eu2noOPBcu"
       },
-      "execution_count": 33,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -193,7 +200,7 @@
       "metadata": {
         "id": "XbC4S2OpLePx"
       },
-      "execution_count": 34,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -207,7 +214,7 @@
       "metadata": {
         "id": "e4f8KLBuve_H"
       },
-      "execution_count": 35,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -224,14 +231,14 @@
         "    # get channel recordings\n",
         "    signal = df[column].values\n",
         "\n",
-        "    # Preprocess by downsampling, then filter channel using bandpass filter\n",
+        "    # Preprocess by filtering the signal with bandpass filter, then downsample.\n",
         "    filtered_signal = bandPassFilter(signal)\n",
         "    preprocessed_signal = downsample_signal(filtered_signal, original_fs, target_fs)\n",
         "\n",
         "    # append processed signal to new_signals list\n",
         "    new_signals.append(preprocessed_signal)\n",
         "\n",
-        "  # for every pair of signals, extract the pearson correlation value\n",
+        "  # for every pair of the processed signals, extract the pearson correlation value\n",
         "  for signal in range(len(new_signals) - 1):\n",
         "    for next_signal in range(len(new_signals)):\n",
         "      corr, _ = pearson_correlation_two_signals(new_signals[signal], new_signals[next_signal])\n",
@@ -246,7 +253,7 @@
       "metadata": {
         "id": "gkY2BCpZV_0f"
       },
-      "execution_count": 36,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -265,7 +272,7 @@
       "metadata": {
         "id": "qGMaj1BDsMpu"
       },
-      "execution_count": 37,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -283,9 +290,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aI9CYfPIPI_j",
-        "outputId": "c093b5a3-7f71-4e1a-e444-b45812d62b5b"
+        "outputId": "1ec9468e-719c-41b7-b763-e73799ceccf1"
       },
-      "execution_count": 38,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,9 +435,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZbHhYB6QhmEu",
-        "outputId": "5d5eb079-5b05-4518-88e0-5467e2aabb83"
+        "outputId": "5df5063a-ff34-405f-bad4-95416d0c3906"
       },
-      "execution_count": 39,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +447,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 11
         }
       ]
     },
@@ -454,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VitoUdYYimve",
-        "outputId": "a6a7222f-8997-41c4-91d1-3044e1e83add"
+        "outputId": "9be9a287-e4af-484f-e040-540fd15c1121"
       },
-      "execution_count": 40,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +473,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 12
         }
       ]
     },
@@ -507,7 +514,7 @@
       "metadata": {
         "id": "TjNW2FvMojAq"
       },
-      "execution_count": 41,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -532,7 +539,7 @@
       "metadata": {
         "id": "jW6pQsCS9cbX"
       },
-      "execution_count": 42,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -570,9 +577,9 @@
           "height": 755
         },
         "id": "zHFZNPEfLfLj",
-        "outputId": "d4bbd9a4-cf2f-4eaa-b9a2-5659b265a73c"
+        "outputId": "3edd4b1d-90d2-4ba0-b05f-120b52a01ad7"
       },
-      "execution_count": 43,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,9 +634,9 @@
           "height": 35
         },
         "id": "4gm_pEGHxfcy",
-        "outputId": "a6438831-8a13-43ce-eccb-8a61bd282be6"
+        "outputId": "be243c32-4bd0-4fb2-cadd-42c0ed5a9073"
       },
-      "execution_count": 44,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +649,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 16
         }
       ]
     }
